--- a/src/gtk/gtk-3.0/gtk-dark-purple.css
+++ b/src/gtk/gtk-3.0/gtk-dark-purple.css
@@ -8857,7 +8857,7 @@ window#XfcePanelWindow.background.panel.xfce4-panel > widget wnck-pager:active, 
 XfdesktopIconView.view {
   border-radius: 2px;
   background: transparent;
-  color: #DDE2E7;
+  color: #363A4E;
   text-shadow: 0 0 1px rgba(0, 0, 0, 0.26), 0 1px 2px rgba(0, 0, 0, 0.32), 0 2px 3px rgba(0, 0, 0, 0.12);
 }
 
@@ -8914,7 +8914,7 @@ window#whiskermenu-window > frame > stack button {
 
 window#whiskermenu-window > frame > stack button:hover {
   background-color: rgba(221, 226, 231, 0.12);
-  color: #DDE2E7;
+  color: #363A4E;
   border-color: rgba(0, 0, 0, 0.2);
 }
 
@@ -9018,7 +9018,7 @@ window.thunar notebook header.top tab.reorderable-page > box > label {
 }
 
 #pulseaudio-button menuitem:hover scale highlight, #xfce4-power-manager-plugin menuitem:hover scale highlight {
-  background-color: #DDE2E7;
+  background-color: #363A4E;
 }
 
 /**********************
