--- a/src/gtk/sass/_libadwaita.scss
+++ b/src/gtk/sass/_libadwaita.scss
@@ -502,7 +502,7 @@ row.entry {
   border-radius: 2px;
 
   &.activatable.focused {
-    outline: 2px solid $selected_bg_color;
+    outline: 2px solid $accent_color;
   }
 
   &:not(:selected).activatable.focused:hover,
@@ -631,7 +631,7 @@ toast {
 
     .app-version {
       padding: 3px 18px;
-      color: $selected_bg_color;
+      color: $accent_color;
       border-radius: 999px;
       margin-top: 3px;
     }
@@ -766,7 +766,7 @@ viewswitcher {
     &:checked {
       background-color: rgba($header_fg, 0.08);
       color: $header_fg;
-      box-shadow: inset 0 -3px $selected_bg_color;
+      box-shadow: inset 0 -3px $accent_color;
     }
   }
 
@@ -834,7 +834,7 @@ viewswitcherbar actionbar > revealer > box {
       &:checked {
         background-color: rgba($fg_color, 0.08);
         color: $fg_color;
-        box-shadow: inset 0 3px $selected_bg_color;
+        box-shadow: inset 0 3px $accent_color;
       }
     }
   }
@@ -902,9 +902,9 @@ indicatorbin {
   }
 
   &.needs-attention > indicator {
-    background: $selected_bg_color;
+    background: $accent_color;
 
-    > label { color: $selected_fg_color; }
+    > label { color: $base_color; }
   }
 }
 
@@ -940,7 +940,7 @@ tabbar {
       min-width: 2px;
       border-radius: 2px;
       margin: 9px 6px;
-      background: gtkalpha($selected_bg_color, 0.5);
+      background: gtkalpha($accent_color, 0.5);
     }
   }
 
@@ -949,12 +949,12 @@ tabbar {
 
     &:selected, &:checked {
       background-color: transparent;
-      box-shadow: inset 0 -3px $selected_bg_color;
+      box-shadow: inset 0 -3px $accent_color;
       color: $fg_color;
     }
 
     &:hover:not(:selected):not(:checked) {
-      box-shadow: inset 0 -3px mix($selected_bg_color, $header_bg, 50%);
+      box-shadow: inset 0 -3px mix($accent_color, $header_bg, 50%);
     }
   }
 
@@ -1025,7 +1025,7 @@ dnd {
 
       &:active {
         @extend %undecorated_button;
-        color: $selected_bg_color;
+        color: $accent_color;
         background-color: darken($bg_color, 8%);
       }
     }
@@ -1033,7 +1033,7 @@ dnd {
     indicator {
       min-height: 2px;
       border-radius: 2px;
-      background: gtkalpha($selected_bg_color, 0.5);
+      background: gtkalpha($accent_color, 0.5);
     }
   }
 }
@@ -1063,12 +1063,12 @@ tabthumbnail {
     &:dir(rtl) { transform: translate(-8px, -8px); }
 
     > widget {
-      background: $selected_bg_color;
+      background: $accent_color;
       min-width: 12px;
       min-height: 12px;
       border-radius: 8px;
       margin: 3px;
-      box-shadow: 0 1px 2px gtkalpha($selected_bg_color, .4);
+      box-shadow: 0 1px 2px gtkalpha($accent_color, .4);
     }
   }
 
@@ -1168,7 +1168,7 @@ preferencesgroup > box {
     }
 
     &:checked {
-      outline-color: $selected_bg_color;
+      outline-color: $accent_color;
     }
   }
 }
@@ -1210,12 +1210,12 @@ toolbarview.undershoot-bottom scrolledwindow {
     }
 
     &:selected {
-      background-color: $selected_bg_color;
-      color: $selected_fg_color;
+      background-color: $accent_color;
+      color: $base_color;
   
       &:hover {
         background-color: $alt_selected_bg_color;
-        color: $selected_fg_color;
+        color: $base_color;
       }
     }
 
@@ -1291,11 +1291,11 @@ $sidebar_pane_bg_backdrop: if($header == 'dark' and $variant == 'light', $header
   }
 
   banner > revealer > widget {
-    background-color: gtkmix($selected_bg_color, $dark_sidebar_bg, 30%);
+    background-color: gtkmix($accent_color, $dark_sidebar_bg, 30%);
     color: $dark_sidebar_fg;
 
     &:backdrop {
-      background-color: gtkmix($selected_bg_color, $dark_sidebar_bg, 30%);
+      background-color: gtkmix($accent_color, $dark_sidebar_bg, 30%);
     }
   }
 
@@ -1333,11 +1333,11 @@ $sidebar_pane_bg_backdrop: if($header == 'dark' and $variant == 'light', $header
   }
 
   banner > revealer > widget {
-    background-color: gtkmix($selected_bg_color, $base_color, 30%);
+    background-color: gtkmix($accent_color, $base_color, 30%);
     color: $text_color;
 
     &:backdrop {
-      background-color: gtkmix($selected_bg_color, $base_color, 30%);
+      background-color: gtkmix($accent_color, $base_color, 30%);
     }
   }
 
@@ -1417,8 +1417,8 @@ $sidebar_pane_bg_backdrop: if($header == 'dark' and $variant == 'light', $header
         &:disabled { @include entry(insensitive); }
 
         selection:focus-within {
-          background-color: $selected_bg_color;
-          color: $selected_fg_color;
+          background-color: $accent_color;
+          color: $base_color;
         }
       }
 
@@ -1458,7 +1458,7 @@ $sidebar_pane_bg_backdrop: if($header == 'dark' and $variant == 'light', $header
           &:checked {
             background-color: rgba($fg_color, 0.08);
             color: $fg_color;
-            box-shadow: inset 0 -3px $selected_bg_color;
+            box-shadow: inset 0 -3px $accent_color;
           }
         }
       }
